--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Regression with your camera</title>
+  <title>Regression</title>
   
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
