--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Regression</title>
-  
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-  <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>Regression</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
+    <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js" type="text/javascript"></script>
     <style>
         body, html{
             font-family: helvetica-neue, helvetica, sans-serif ;
@@ -17,6 +16,7 @@
         #caption {
             width : 200px;
             height : calc(100% - 150px);
+            min-height: 450px;
             position : absolute;
             background-color: black;
             color : white;
@@ -25,35 +25,39 @@
         #slider{
             width : 160px;
         }
+        .box{
+            width: 200px;
+            height : 100%;
+            display : none;
+            position: absolute;
+             background-color: black;
+        }
         
     </style>
 </head>
 
 <body>
-     <div id="caption">
-     
-  <h2>Regression</h2>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <div id="videoContainer"></div>
-  <h6 id="loading">Loading base model...</h6>
-  <p>
-    <input type="range" name="slider" id="slider" min="0.00" max="1.0" step="0.01" value="0.5">
-  </p>
-  <br>
-  
-    <button id="addSample">Add Sample</button>
-    <p><span id="amountOfSamples">0</span> Sample Images</p>
-  
+   <div class="box"></div>
+    <div id="caption">
+        <h2>Regression</h2> <br/>
+        <div id="videoContainer"></div>
+        <h6 id="loading">Loading base model...</h6>
+        <p>
+            <input type="range" name="slider" id="slider" min="0.00" max="1.0" step="0.01" value="0.5">
+        </p>
+        <br>
+        <button id="addSample">Add Sample</button>
+        <p><span id="amountOfSamples">0</span> Sample Images</p>
+        <br />
+        <p><button id="train">Train</button></p>
+        <p id="loss"></p>
+        <br />
+        <p>
+            <button id="buttonPredict">Start prediction</button><br>
+        </p>
 
-  <br/>
-  <p><button id="train">Train</button></p><p id="loss"></p>
-  <br/>
-  <p>
-    <button id="buttonPredict">Start prediction</button><br>
-  </p>
-  
-  </div>
-  <script src="sketch.js"></script>
+    </div>
+    <script src="sketch.js"></script>
 </body>
 
 </html>
